[package]
authors = ["Jonathan Morley <morley.jonathan@gmail.com>"]
description = "Generates temporary AWS credentials with Okta."
edition = "2021"
name = "oktaws"
version = "0.18.0"
license = "Apache-2.0"
repository = "https://github.com/jonathanmorley/oktaws"
keywords = ["okta", "aws", "saml"]
categories = [
  "command-line-utilities",
  "authentication"
]
readme = "README.md"

[dependencies]
async-recursion = "1"
aws-arn = "0.3"
aws-credential-types = "1.2.1"
aws-sdk-sts = "1.53.0"
aws-sdk-iam = "1.55.0"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"
color-eyre = "0.6"
dialoguer = "0.10"
dirs = "5"
futures = "0.3"
glob = "0.3"
itertools = "0.11"
keyring = "2"
kuchiki = "0.8"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json", "rustls-tls"] }
samuel = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.7"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.2.4"
url = { version = "2", features = ["serde"] }
username = "0.2"
eyre = "0.6.8"
aws-smithy-types = "1.2.11"
aws-runtime = { git = "https://github.com/jonathanmorley/smithy-rs", branch = "profile-mutation" }
aws-types = { git = "https://github.com/jonathanmorley/smithy-rs", branch = "profile-mutation" }
mockall = "0.12.1"
mockall_double = "0.3.1"

[dev-dependencies]
aws-smithy-runtime = { version = "1.7.6", features = ["test-util"] }
http = "0.2"
serial_test = "2"
tempfile = "3"
tokio-test = "0.4"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.78.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin"
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
